force-app/main/default/objects/Todoist_Config__mdt/Todoist_Config__mdt.object-meta.xml
<CustomObject>
    <label>Todoist Config</label>
    <pluralLabel>Todoist Configs</pluralLabel>
    <description>Configuration settings for Todoist integration</description>
</CustomObject> 