force-app/main/default/objects/Todoist_Config__mdt/fields/Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Auth_Endpoint__c</fullName>
    <description>Todoist OAuth Authorization Endpoint</description>
    <label>Auth Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 