force-app/main/default/objects/Todoist_Config__mdt/fields/Redirect_URI__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URI__c</fullName>
    <description>OAuth Redirect URI for callback handling</description>
    <label>Redirect URI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 