force-app/main/default/objects/Todoist_Config__mdt/fields/Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint__c</fullName>
    <description>Todoist OAuth Token Endpoint</description>
    <label>Token Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 